--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Discord.js docs wrapper/generator",
   "main": "index.js",
   "scripts": {
-    "test": "node test/test.js"
+    "test": "node test/test.js",
+    "eslint": "eslint **/*.js"
   },
   "repository": {
     "type": "git",
